--- a/src/TODO
+++ b/src/TODO
@@ -4,4 +4,5 @@ TODO: make url guards
 TODO: add date time to add recipe and make it visible on recipe panel
 TODO: add gender to user registration
 TODO: preperation time and cooking time
+TODO: handling file upload deletion after change or recipe delete
 
